fix: fix sidenav collapse issue

--- a/src/styles/theme/_header.scss
+++ b/src/styles/theme/_header.scss
@@ -31,17 +31,3 @@
     top: 0;
   }
 }
-
-// Header user
-.matero-user {
-  display: inline-block;
-  padding: 0 8px;
-  color: #333;
-  font-size: 14px;
-  line-height: 40px;
-  border-radius: 4px;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, .05);
-  }
-}
