--- a/src/styles/theme/_sidenav.scss
+++ b/src/styles/theme/_sidenav.scss
@@ -191,7 +191,7 @@
     }
   }
 
-  .matero-content {
+  .matero-content-wrap {
     margin-left: $sidenav-collapsed-width !important;
   }
 }
